gateway configuration, envs, dockerfile

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-server.port=8080
+server.host=${HOST_ADDRESS}
+server.port=${MSV_PORT}
+
+gateway.footballers=${FOOTBALLERS_ADDRESS}
+gateway.teams=${TEAMS_ADDRESS}
+
+server.tomcat.accesslog.enabled=true
