--- a/teams/src/main/resources/application.properties
+++ b/teams/src/main/resources/application.properties
@@ -1,14 +1,12 @@
 spring.datasource.url=jdbc:h2:mem:teams_db
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=adminadmin
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.open-in-view=false
 
-spring.h2.console.enabled=true
-
-server.port=8081
-footballer.footballers.url=http://localhost:8082/api/
+server.port=${MSV_PORT}
+footballer.footballers.url=${FOOTBALLER_API_ENDPOINT}
