--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,18 +1,10 @@
 FROM node:18 AS builder
 
-WORKDIR /app
-
-COPY . .
-
-RUN npm i && npm run build
-
 FROM nginx
 
-WORKDIR /usr/share/nginx/html
+RUN rm -rf /usr/share/nginx/html/*
 
-RUN rm -rf ./*
-
-COPY --from=builder /app/dist/frontend .
+COPY app /usr/share/nginx/html/
 
 EXPOSE 80
 COPY nginx.conf /etc/nginx/conf.d/default.conf
