fixed white space in url - proxy module

--- a/proxy/nginx-proxy.conf
+++ b/proxy/nginx-proxy.conf
@@ -3,10 +3,12 @@ server {
     server_name localhost;
 
     location ~ ^/api/(.*)$ {
-        proxy_pass http://172.28.0.5:8080/api/$1;
+        set $query $1;
+        proxy_pass http://172.28.0.5:8080/api/$query;
     }
 
     location ~ ^/(.*)$ {
-        proxy_pass http://172.28.0.6/$1;
+        set $query $1;
+        proxy_pass http://172.28.0.6/$query;
     }
 }
