added file transfer functionality

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,31 @@ services:
     depends_on:
       - gateway
 
+  file-db:
+    image: mariadb
+    environment:
+      - MARIADB_ROOT_PASSWORD=adminadmin
+      - MARIADB_DATABASE=files_db
+    networks:
+      internal_nw:
+        ipv4_address: 172.28.0.7
+
+  file-transfer:
+    build: ./fileTransfer/
+    environment:
+      - DB_HOST=172.28.0.7
+      - STORAGE_LOCATION=/files
+      - MSV_PORT=8083
+    volumes:
+      - C:\MyFiles\studia\sem5\architektury_uslug_internetowych\filetransfer:/files
+    ports:
+      - "9300:8083"
+    networks:
+      internal_nw:
+        ipv4_address: 172.28.0.8
+    depends_on:
+      - file-db
+
 networks:
   internal_nw:
     driver: bridge
