--- a/fileTransfer/src/main/resources/application.properties
+++ b/fileTransfer/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:mariadb://${DB_HOST}:3306/files_db
+spring.datasource.username=root
+spring.datasource.password=adminadmin
 
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+fileTransfer.fileStorage.path=${STORAGE_LOCATION}
+server.port=${MSV_PORT}
